@@ -132,11 +132,11 @@ public class ERXNavigationMenuItem extends ERXStatelessComponent {
     public WOComponent menuItemSelected() {
         WOComponent anActionResult = null;
 
-        if ((navigationItem().action() != null) && (navigationItem().action() != "")) {
+        if (!ERXStringUtilities.stringIsNullOrEmpty(navigationItem().action())) {
             anActionResult = (WOComponent)valueForKeyPath(navigationItem().action());
-        } else if ((navigationItem().pageName() != null) && (navigationItem().pageName() != "")) {
+        } else if (!ERXStringUtilities.stringIsNullOrEmpty(navigationItem().pageName())) {
             anActionResult = pageWithName(navigationItem().pageName());
-        } else if ((navigationItem().directActionName() != null) && (navigationItem().directActionName() != "")) {
+        } else if (!ERXStringUtilities.stringIsNullOrEmpty(navigationItem().directActionName())) {
             // FIXME: Need to support directAction classes
             if(_linkDirectlyToDirectActions) {
                 ERXDirectAction da = new ERXDirectAction(context().request());
@@ -255,7 +255,7 @@ public class ERXNavigationMenuItem extends ERXStatelessComponent {
 
 	public boolean omitLabelSpanTag() {
 		if (_omitLabelSpanTag == null) {
-			_omitLabelSpanTag = new Boolean(!ERXProperties.booleanForKeyWithDefault("er.extensions.ERXNavigationManager.includeLabelSpanTag", false));
+			_omitLabelSpanTag = Boolean.valueOf(!ERXProperties.booleanForKeyWithDefault("er.extensions.ERXNavigationManager.includeLabelSpanTag", false));
 		}
 		return _omitLabelSpanTag;
 	}
